# MySocket

./: .project  00001daytimetcpclii.c  00002daytimetcpsrv.c  00003byteorder.c  00004daytimetcpsrv1.c  00005tcpcli01.c  00005tcpcli02.c  00005tcpsrv01.c  00005tcpsrv02.c  00005tcpsrv03.c  00006tcpcli01.c  00006tcpcli02.c  00006tcpsrv01.c  00006tcpsrv02.c  00007tcpcheckopt.c  00008udpcli01.c  00008udpcli02.c  00008udpsrv01.c  CMakeLists.txt  Makefile  README.md  cmake.sh  test.c
advance/: Makefile
advance/IO3/: dopread.c  holefile.c  iscanseek.c  statisticFileTypeCount.c
advance/IO3/include/: dopread.h  holefile.h  iscanseek.h  statisticFileTypeCount.h
advance/Signal10/: catch.c  mutexAndCondition.c  parentChildWrite.c  restartedok.c  sigprocmask.c  sigprocmask1.c  sigprocmask2.c  sigprocmask3.c  unrein.c  unworksigchld.c
advance/Signal10/include/: catch.h  sigprocmask.h  unrein.h
advance/daemon13/: rule.c
concept/: Makefile  fork.c  fork2.c  main.c  main2.c
concept/include/: fork.h  fork2.h
lib/: unp.c
lib/include/: ReadMe  listen.h  read.h  readbuf.h  socket.h  sort.h  unp.h
make/: ReadMe  main.c
net1/1-5/: client.c
net1/common/: unp.h
